--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"token":"MTExNDk2MDUyNDg2MjU1NDIxMw.G6m9dd.z37PGChE01DdS1KybjQw67LPiP5aOJxK3b_TbY", "prefix":"?"}
+{"token":"XmUt_q1-VODIglH1u2DaknDO6a7vke6x", "prefix":"?"}
